--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
+  <meta content="" name="author">
 
-  <!-- Disable tap highlight on IE -->
+
   <meta name="msapplication-tap-highlight" content="no">
   
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>UAS Manajemen Proyek</title>  
 
 <link href="./main.d8e0d294.css" rel="stylesheet"></head>
 
@@ -27,24 +27,10 @@
 <main class="content-wrapper">
   <header class="white-text-container section-container">
     <div class="text-center">
-      <h1>I am David Folley</h1>
-      <p>Web designer</p>
+      <h1>UAS Manajemen Proyek</h1>
+      <p>SIEGA UNIKA Soegijapranata Semarang</p>
       <p>
-        <a class="fa-icon fa-icon-2x" href="https://facebook.com/" title="">
-          <i class="fa fa-facebook"></i>
-        </a>
-        <a class="fa-icon fa-icon-2x" href="https://twitter.com/" title="">
-          <i class="fa fa-twitter"></i>
-        </a>
-        <a class="fa-icon fa-icon-2x" href="https://dribbble.com/" title="">
-          <i class="fa fa-dribbble"></i>
-        </a>
-        <a class="fa-icon fa-icon-2x" href="https://www.linkedin.com/" title="">
-          <i class="fa fa-linkedin"></i>
-        </a>
-        <a class="fa-icon fa-icon-2x" href="https://vimeo.com/" title="">
-          <i class="fa fa-vimeo"></i>
-        </a>
+        <p><img src="./assets/images/LogoSIEGA.png" class="center" width="500" height="155"  alt=""></p>
       </p>
     </div>
   </header>
