ini adalah update final

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h1>UAS Manajemen Proyek</h1>
       <p>SIEGA UNIKA Soegijapranata Semarang</p>
       <p>
-        <p><img src="./assets/images/LogoSIEGA.png" class="center" width="500" height="155"  alt=""></p>
+        <p><img src="./assets/images/LogoSIputih.png" class="center" width="500" height="155"  alt=""></p>
       </p>
     </div>
   </header>
@@ -75,7 +75,7 @@
               </div>
               <div class="col-md-4">
                 <img src="./assets/images/igsiega.png" class="img-responsive" alt="">
-                <h3 class="h5 date-title">Instagram - <a href="https://www.instagram.com/@siega_unika" title="SIEGA UNIKA Soegijapranata">@siega_unika</a></h3>
+                <h3 class="h5 date-title">Instagram - <a href="https://www.instagram.com/siega_unika/" title="SIEGA UNIKA Soegijapranata">@siega_unika</a></h3>
                 <p></p>
               </div>
             </div>
@@ -85,31 +85,31 @@
         
         <div class="card">
           <div class="card-block">
-            <h2>Projects</h2>
+            <h2>Wow Things</h2>
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <img src="./assets/images/img-05.jpg" class="img-responsive" alt="...">
+                <img src="./assets/images/akresiega.png" class="img-responsive" alt="...">
                 <div class="carousel-caption">
-                  <h3 class="h5">Podcast</h3>
+                  <h3 class="h5">Akreditasi</h3>
                   <p></p>
                 </div>
               </div>
               <div class="item">
-                <img src="./assets/images/img-06.jpg" class="img-responsive" alt="...">
+                <img src="./assets/images/siegaverse.png" class="img-responsive" alt="...">
                 <div class="carousel-caption">
-                  <h3 class="h5">E-Commerce</h3>
+                  <h3 class="h5"><a href="https://hubs.mozilla.com/Wajn8vZ/siega-verse/" title="SIEGA UNIKA Soegijapranata">SIEGAVERSE</a></h3>
                   <p></p>
                 </div>
               </div>
 
               <div class="item">
-                <img src="./assets/images/img-08.jpg" class="img-responsive" alt="...">
+                <img src="./assets/images/lokersiega.png" class="img-responsive" alt="...">
                 <div class="carousel-caption">
-                  <h3 class="h5">Game Technology</h3>
+                  <h3 class="h5"></h3>
                   <p></p>
                 </div>
               </div>
